# wikeyword

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
wikeyword/: main.py
wikeyword/config/: settings.py
wikeyword/service/: entity_extractor.py  keyword_extractor.py  morphological_analyzer.py
wikeyword/static/css/: style.css
wikeyword/templates/: index.html  layout.html
